--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "homepage": "https://github.com/project-ile/api#readme",
   "dependencies": {
     "apollo-server-express": "^2.7.2",
+    "auth0": "^2.18.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.6.0",
     "mongoose": "^5.6.7"
   },
   "devDependencies": {
