--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   "dependencies": {
     "apollo-server-express": "^2.8.1",
     "auth0": "^2.18.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
+    "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
-    "mongoose": "^5.6.7"
+    "mongoose": "^5.6.7",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1",
