--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server-express": "^2.8.1",
     "auth0": "^2.18.0",
     "cors": "^2.8.5",
+    "dataloader": "^1.4.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
