--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apollo-server-express": "^2.8.1",
     "auth0": "^2.18.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "dotenv": "^8.0.0",
