Add jest and mongodb dependencies for writing tests

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "College Resources API Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "debug": "nodemon --inspect server.js"
+    "debug": "nodemon --inspect server.js",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://gitlab.com/college-resources/api#readme",
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "apollo-server-express": "^2.8.1",
     "auth0": "^2.18.0",
     "body-parser": "^1.19.0",
@@ -38,7 +40,18 @@
   },
   "devDependencies": {
     "eslint": "^6.2.1",
+    "jest": "^25.5.1",
     "nodemon": "^1.19.1",
     "standard": "^13.1.0"
+  },
+  "standard": {
+    "globals": [
+      "beforeEach",
+      "it",
+      "describe",
+      "expect",
+      "beforeAll",
+      "afterAll"
+    ]
   }
 }
