--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "College Resources API Server",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "debug": "nodemon --inspect server.js",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules",
+    "watch": "npm-run-all --sequential watch:prepare watch:run",
+    "watch:prepare": "node -e \"const fs = require('fs'); fs.existsSync('./dist') || fs.mkdirSync('./dist')\"",
+    "watch:run": "npm-run-all --parallel watch:server watch:build",
+    "watch:build": "npm run development -- --watch",
+    "watch:server": "nodemon --inspect --watch dist ./dist/bundle.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
+    "lint": "eslint --ext .js .",
+    "fix": "eslint --fix --ext .js .",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
@@ -39,10 +47,16 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "eslint": "^6.2.1",
     "jest": "^25.5.1",
     "nodemon": "^1.19.1",
-    "standard": "^13.1.0"
+    "npm-run-all": "^4.1.5",
+    "standard": "^13.1.0",
+    "terser-webpack-plugin": "^3.0.1",
+    "val-loader": "^2.1.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "standard": {
     "globals": [
