--- a/package.json
+++ b/package.json
@@ -28,28 +28,26 @@
     "url": "https://gitlab.com/college-resources/api/issues"
   },
   "homepage": "https://gitlab.com/college-resources/api#readme",
-  "dependencies": {
+  "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5",
     "apollo-server-express": "^2.8.1",
     "auth0": "^2.18.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dataloader": "^1.4.0",
     "dotenv": "^8.0.0",
+    "eslint": "^6.2.1",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
     "helmet": "^3.20.0",
+    "jest": "^25.5.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "mongoose": "^5.6.7",
-    "morgan": "^1.9.1"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.2",
-    "eslint": "^6.2.1",
-    "jest": "^25.5.1",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "standard": "^13.1.0",
