--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://gitlab.com/college-resources/api#readme",
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.1.5",
+    "@shelf/jest-mongodb": "^1.2.2",
     "apollo-server-express": "^2.8.1",
     "auth0": "^2.18.0",
     "body-parser": "^1.19.0",
@@ -51,19 +51,15 @@
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "standard": "^13.1.0",
+    "supertest": "^4.0.2",
     "terser-webpack-plugin": "^3.0.1",
     "val-loader": "^2.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "standard": {
-    "globals": [
-      "beforeEach",
-      "it",
-      "describe",
-      "expect",
-      "beforeAll",
-      "afterAll"
-    ]
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "latest"
+    }
   }
 }
