--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
+    "open-graph-scraper": "^4.5.1",
     "standard": "^13.1.0",
     "terser-webpack-plugin": "^3.0.1",
     "val-loader": "^2.1.1",
