--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
-module.exports = {
+{
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "extends": "eslint:recommended",
     "globals": {
@@ -10,8 +11,8 @@ module.exports = {
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2020
     },
     "rules": {
     }
-};
+}
