--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "name": "college-resources-api",
   "version": "0.1.0",
   "description": "College Resources API Server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules",
-    "watch": "npm-run-all --sequential watch:prepare watch:run",
-    "watch:prepare": "node -e \"const fs = require('fs'); fs.existsSync('./dist') || fs.mkdirSync('./dist')\"",
-    "watch:run": "npm-run-all --parallel watch:server watch:build",
-    "watch:build": "npm run development -- --watch",
-    "watch:server": "nodemon --inspect --watch dist ./dist/bundle.js",
+    "development": "cross-env NODE_ENV=development node .",
+    "watch": "npm-run-all --sequential nodemon .",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules",
+    "production": "cross-env NODE_ENV=production node .",
     "lint": "eslint --ext .js .",
     "fix": "eslint --fix --ext .js .",
     "test": "jest",
@@ -29,42 +25,29 @@
   },
   "homepage": "https://gitlab.com/college-resources/api#readme",
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.1.5",
-    "apollo-server-express": "^2.8.1",
-    "auth0": "^2.18.0",
+    "@shelf/jest-mongodb": "^1.2.3",
+    "apollo-server-express": "^2.19.0",
+    "auth0": "^2.30.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
-    "dataloader": "^1.4.0",
-    "dotenv": "^8.0.0",
-    "eslint": "^6.2.1",
+    "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
-    "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
-    "helmet": "^3.20.0",
-    "jest": "^25.5.1",
+    "helmet": "^4.2.0",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^1.6.0",
-    "mongoose": "^5.6.7",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.19.1",
+    "jwks-rsa": "^1.11.0",
+    "mongoose": "^5.10.12",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
+    "npm-check-updates": "^9.2.4",
     "npm-run-all": "^4.1.5",
-    "open-graph-scraper": "^4.5.1",
-    "standard": "^13.1.0",
-    "terser-webpack-plugin": "^3.0.1",
-    "val-loader": "^2.1.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
-  },
-  "standard": {
-    "globals": [
-      "beforeEach",
-      "it",
-      "describe",
-      "expect",
-      "beforeAll",
-      "afterAll"
-    ]
+    "open-graph-scraper": "^4.7.0",
+    "terser-webpack-plugin": "^5.0.3"
   }
 }
