Fix ESLint and npm scripts

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
         "jest/globals": true
     },
     "extends": "eslint:recommended",
+    "plugins": ["jest"],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
