--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "watch": "cross-env NODE_ENV=development nodemon .",
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node .",
-    "lint": "eslint --ext .js .",
-    "fix": "eslint --fix --ext .js .",
+    "lint": "eslint .",
+    "fix": "eslint --fix .",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
@@ -34,6 +34,8 @@
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
@@ -47,6 +49,7 @@
     "nodemon": "^2.0.6",
     "npm-check-updates": "^9.2.4",
     "open-graph-scraper": "^4.7.0",
+    "prettier": "^2.1.2",
     "terser-webpack-plugin": "^5.0.3"
   }
 }
