Add prettierignore - Add prettier to eslint fix script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node .",
     "lint": "eslint .",
-    "fix": "eslint --fix .",
+    "fix": "prettier --write . && eslint --fix .",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
